[gd_scene load_steps=63 format=2]

[ext_resource path="res://content/sounds/monster/walker/DomePunch02_05.wav" type="AudioStream" id=1]
[ext_resource path="res://content/monster/walker/Walker.gd" type="Script" id=2]
[ext_resource path="res://content/sounds/monster/walker/DomePunch03_02.wav" type="AudioStream" id=3]
[ext_resource path="res://content/sounds/monster/walker/DomePunch02_02.wav" type="AudioStream" id=4]
[ext_resource path="res://content/sounds/monster/walker/DomePunch01_01.wav" type="AudioStream" id=5]
[ext_resource path="res://content/monster/walker/sheet.png" type="Texture" id=6]
[ext_resource path="res://content/sounds/monster/walker/DomePunch02_07.wav" type="AudioStream" id=7]
[ext_resource path="res://content/sounds/monster/walker/DomePunch02_01.wav" type="AudioStream" id=8]
[ext_resource path="res://content/sounds/monster/walker/DomePunch02_03.wav" type="AudioStream" id=9]
[ext_resource path="res://content/sounds/monster/walker/DomePunch02_04.wav" type="AudioStream" id=10]
[ext_resource path="res://content/sounds/monster/walker/DomePunch03_04.wav" type="AudioStream" id=11]
[ext_resource path="res://content/sounds/monster/walker/DomePunch03_01.wav" type="AudioStream" id=12]
[ext_resource path="res://content/sounds/monster/walker/DomePunch03_05.wav" type="AudioStream" id=13]
[ext_resource path="res://content/sounds/monster/walker/DomePunch03_03.wav" type="AudioStream" id=14]
[ext_resource path="res://content/sounds/monster/walker/DomePunch02_06.wav" type="AudioStream" id=15]
[ext_resource path="res://content/sounds/monster/walker/DomePunch01_02.wav" type="AudioStream" id=16]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=17]
[ext_resource path="res://content/sounds/monster/walker/WalkerDeath.wav" type="AudioStream" id=18]
[ext_resource path="res://content/sounds/monster/tick/tick_jump.wav" type="AudioStream" id=19]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_03.wav" type="AudioStream" id=20]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_05.wav" type="AudioStream" id=21]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_01.wav" type="AudioStream" id=22]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_04.wav" type="AudioStream" id=23]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_02.wav" type="AudioStream" id=24]
[ext_resource path="res://content/monster/FlashMaterial.tres" type="Material" id=30]

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 6 )
region = Rect2( 0, 80, 76, 40 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 6 )
region = Rect2( 76, 80, 76, 40 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 6 )
region = Rect2( 0, 120, 76, 40 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 6 )
region = Rect2( 76, 120, 76, 40 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 6 )
region = Rect2( 152, 120, 76, 40 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 6 )
region = Rect2( 228, 120, 76, 40 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 6 )
region = Rect2( 304, 120, 76, 40 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 6 )
region = Rect2( 380, 120, 76, 40 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 6 )
region = Rect2( 456, 120, 76, 40 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 6 )
region = Rect2( 532, 120, 76, 40 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 6 )
region = Rect2( 608, 120, 76, 40 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 76, 40 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 6 )
region = Rect2( 76, 0, 76, 40 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 6 )
region = Rect2( 152, 0, 76, 40 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 6 )
region = Rect2( 228, 0, 76, 40 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 6 )
region = Rect2( 304, 0, 76, 40 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 6 )
region = Rect2( 380, 0, 76, 40 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 6 )
region = Rect2( 456, 0, 76, 40 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 6 )
region = Rect2( 532, 0, 76, 40 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 6 )
region = Rect2( 0, 40, 76, 40 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 6 )
region = Rect2( 76, 40, 76, 40 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 6 )
region = Rect2( 152, 40, 76, 40 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 6 )
region = Rect2( 228, 40, 76, 40 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 6 )
region = Rect2( 304, 40, 76, 40 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 6 )
region = Rect2( 380, 40, 76, 40 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 6 )
region = Rect2( 456, 40, 76, 40 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 6 )
region = Rect2( 532, 40, 76, 40 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 6 )
region = Rect2( 608, 40, 76, 40 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 6 )
region = Rect2( 684, 40, 76, 40 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 6 )
region = Rect2( 760, 40, 76, 40 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 6 )
region = Rect2( 836, 40, 76, 40 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 6 )
region = Rect2( 912, 40, 76, 40 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 6 )
region = Rect2( 988, 40, 76, 40 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 96 ), SubResource( 97 ) ],
"loop": true,
"name": "hit",
"speed": 10.0
}, {
"frames": [ SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ) ],
"loop": false,
"name": "die",
"speed": 10.0
}, {
"frames": [ SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=34]
radius = 12.0
height = 2.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 8.0
height = 12.0

[sub_resource type="CircleShape2D" id=107]
radius = 5.38516

[node name="Walker" type="Area2D" groups=["monster"]]
collision_layer = 128
collision_mask = 0
script = ExtResource( 2 )
techId = "walker"

[node name="Sprite" type="AnimatedSprite" parent="."]
material = ExtResource( 30 )
position = Vector2( 1, -18 )
frames = SubResource( 1 )
animation = "walk"

[node name="HitboxDefault" type="CollisionShape2D" parent="."]
position = Vector2( 4, -12 )
shape = SubResource( 34 )
disabled = true

[node name="HitboxHit" type="CollisionShape2D" parent="."]
position = Vector2( -3, -12 )
shape = SubResource( 3 )
disabled = true

[node name="HitPosition" type="Position2D" parent="."]
position = Vector2( 25, -15 )

[node name="DieSound" parent="." instance=ExtResource( 17 )]
stream = ExtResource( 18 )
bus = "World"
randomVolume = 1.0
randomPitch = 0.2

[node name="PunchSound1" parent="." instance=ExtResource( 17 )]
pitch_scale = 0.8
bus = "World"
streams = [ ExtResource( 5 ), ExtResource( 16 ) ]

[node name="PunchSound2" parent="." instance=ExtResource( 17 )]
volume_db = 4.142
pitch_scale = 0.82
bus = "World"
streams = [ ExtResource( 8 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 1 ), ExtResource( 15 ), ExtResource( 7 ) ]

[node name="StunSound" parent="." instance=ExtResource( 17 )]
stream = ExtResource( 19 )
volume_db = 1.958
pitch_scale = 1.53
bus = "World"
randomPitch = 0.18
streams = [ ExtResource( 22 ), ExtResource( 24 ), ExtResource( 20 ), ExtResource( 23 ), ExtResource( 21 ) ]

[node name="PunchSound3" parent="." instance=ExtResource( 17 )]
volume_db = -2.761
pitch_scale = 0.76
bus = "World"
streams = [ ExtResource( 12 ), ExtResource( 3 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 13 ) ]

[node name="StepCollisions" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StepCollisions"]
position = Vector2( -7, 0 )
shape = SubResource( 107 )

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="Sprite" to="." method="_on_Sprite_frame_changed"]
